--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ flutter:
 
   assets:
     - assets/
+    - assets/bracelets/
+    - assets/cadrans/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
