--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flutter_swiper : ^1.1.6
   carousel_slider: ^1.3.1
   http: ^0.12.0+2
+  url_launcher: ^5.2.1
+  geolocator: ^5.1.4+1
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -46,6 +49,8 @@ flutter:
     - assets/
     - assets/bracelets/
     - assets/cadrans/
+    - assets/others/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
