--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   carousel_slider: ^1.3.1
   http: ^0.12.0+2
   url_launcher: ^5.2.0
-  geolocator: ^5.1.4+1
+  google_maps_flutter:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  geolocator: ^5.1.4+1
 
 dev_dependencies:
   flutter_test:
@@ -44,6 +46,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  module:
+    androidX: true
 
   assets:
     - assets/
