--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: augarde_showroom
+name: watchshowroomapp
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -19,18 +19,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_swiper : ^1.1.6
+  flutter_swiper: ^1.1.6
   carousel_slider: ^1.3.1
   http: ^0.12.0+2
-  url_launcher: ^5.2.0
-  google_maps_flutter:
+  url_launcher: ^5.4.2
+  google_maps_flutter: ^0.5.25
   qr_flutter: ^3.0.1
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  geolocator: ^5.1.4+1
+  geolocator: ^5.3.1
 
 dev_dependencies:
   flutter_test:
@@ -47,19 +46,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  module:
-    androidX: true
 
+  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
     - assets/bracelets/
     - assets/cadrans/
     - assets/others/
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
